2006-03-28  Adam Piatyszek  <ediap@users.sourceforge.net>

	* TODO: Updated to reflect recent changes.

	* itpp/base/itpp_version.cpp, itpp/base/itpp_version.h,
	itpp/itconfig.h, itpp/base/array.h, itpp/base/mat.h,
	itpp/base/newton_search.cpp, itpp/base/newton_search.h,
	itpp/base/sources.mk, itpp/base/vec.h, itpp/sources.mk: Merged the
	content of itpp/itconfig.h and itpp/base/itpp_version.{cpp,h}
	files into new files itpp/base/itmisc.{cpp,h}. The new files
	should include miscleaneous functions related to IT++ library.

2006-03-27  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac, itpp-config.in: Minor fix in the itpp-config
	script. Now `itpp-config --libs-debug' uses `-litpp' when the
	debug library is not available.

2006-03-25  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/commfunc.h, itpp/comm/sequence.h,
	itpp/fixed/fix_base.h, itpp/itbase.h, itpp/itcomm.h,
	itpp/itconfig.h, itpp/itfixed.h, itpp/itprotocol.h,
	itpp/itsignal.h, itpp/itsrccode.h: Documentation of IT++ modules
	divided into modules. Minor fixes in various places.
	
2006-03-24  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/features.doc: Statistics classes and functions moved
	from signal-processing to base math module.

	* itpp/sources.mk: Added missing "itpp/itsignal.h" file.
	
	* itpp/srccode/lpcfunc.cpp, itpp/signal/fastica.cpp: Fixed
	improper include statements after moving signal-processing related
	classes and functions to a separate subdirectory.

	* config/acx_blas.m4: Removed unnecessary check for "libblas",
	beside "libf77blas" in ATLAS detection routines. This fixes a
	configuration problem in the case when both the ATLAS and NetLib's
	blas libraries are installed.

2006-03-23  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac: Changed CBLAS and LAPACK library detection order
	due to linking problems under Cygwin.

2006-03-21  Adam Piatyszek  <ediap@users.sourceforge.net>
