@@ -68,6 +68,14 @@ if test $acx_cblas_ok = no; then
   LIBS="$save_LIBS"
 fi
 
+# CBLAS from ACML linked to by default using FLIBS?
+cblas_acml_ok=no
+if test $acx_cblas_ok = no; then
+  save_LIBS="$LIBS"; LIBS="$LIBS $BLAS_LIBS $FLIBS"
+  AC_CHECK_FUNC(sgemm, [acx_cblas_ok=yes; cblas_acml_ok=yes])
+  LIBS="$save_LIBS"
+fi
+
 # Generic CBLAS library?
 for cblas in cblas gslcblas; do
   if test $acx_cblas_ok = no; then
@@ -82,6 +90,9 @@ AC_SUBST(CBLAS_LIBS)
 # Finally, define HAVE_CBLAS
 if test x"$acx_cblas_ok" = xyes; then
   AC_DEFINE(HAVE_CBLAS, 1, [Define if you have CBLAS library.])
+  if test x"$cblas_acml_ok" = xyes; then
+    AC_DEFINE(HAVE_CBLAS_ACML, 1, [Define if you have ACML CBLAS library.])
+  fi
 fi
 
 ])dnl ACX_CBLAS
